src/parser/snapshots/expr/bitwise/double_logical_unary_not.snap
---
source: src/parser/parser.rs
description: bitwise operator expressions
expression: actual.unwrap()
info: "!!10"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - not
    - location:
        line: 1
        column: 2
      kind:
        unary:
          - not
          - location:
              line: 1
              column: 3
            kind:
              int_constant:
                - "10"
                - decimal
