src/parser/snapshots/expr/bitwise/logical_unary_not.snap
---
source: src/parser/parser.rs
description: bitwise operator expressions
expression: actual.unwrap()
info: "!20"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - not
    - location:
        line: 1
        column: 2
      kind:
        int_constant:
          - "20"
          - decimal
