src/parser/snapshots/expr/bitwise/unary_negation.snap
---
source: src/parser/parser.rs
description: bitwise operator expressions
expression: actual.unwrap()
info: "-10"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - negate
    - location:
        line: 1
        column: 2
      kind:
        int_constant:
          - "10"
          - decimal
